--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+                                            <div class="mt-5">
+                                                <p class="text-muted text-uppercase mb-2">Wordpress</p>
+                                                <div class="progress">
+                                                    <div class="progress-bar" style="width:30%;">
+                                                        <div class="progress-value text-muted">86%</div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -175,7 +184,7 @@
                                             <div class="mt-5">
                                                 <p class="text-muted text-uppercase mb-2">C#</p>
                                                 <div class="progress">
-                                                    <div class="progress-bar" style="width:50%;">
+                                                    <div class="progress-bar" style="width:30%;">
                                                         <div class="progress-value text-muted">84%</div>
                                                     </div>
                                                 </div>
@@ -183,7 +192,7 @@
                                             <div class="mt-5">
                                                 <p class="text-muted text-uppercase mb-2">Javascript</p>
                                                 <div class="progress">
-                                                    <div class="progress-bar" style="width:40%;">
+                                                    <div class="progress-bar" style="width:30%;">
                                                         <div class="progress-value text-muted">80%</div>
                                                     </div>
                                                 </div>
@@ -191,7 +200,7 @@
                                             <div class="mt-5">
                                                 <p class="text-muted text-uppercase mb-2">Php</p>
                                                 <div class="progress">
-                                                    <div class="progress-bar" style="width:40%;">
+                                                    <div class="progress-bar" style="width:30%;">
                                                         <div class="progress-value text-muted">76%</div>
                                                     </div>
                                                 </div>
@@ -258,8 +267,8 @@
         </section>
         <!-- about end -->
 
-        <!-- services start -->
-        <section class="section bg-light" id="services">
+       <!-- services start -->
+        <!-- <section class="section bg-light" id="services">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
@@ -379,8 +388,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- services end -->
+        </section> -->
+        <!-- services end --> 
 
         <!-- portfolio start -->
         <section class="section" id="portfolio">
