commit before testing phpmailer

--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
                                     <h5 class="text-white-50 sub-title mb-3 font-weight-normal">Web Developer</h5>
                                     <h1 class="display-3 text-white title font-weight-bold">Svetoslav Konakov</h1>
                                     <p class="text-light mx-auto para-desc">
-                                        "It’s not about the destination, it’s the journey!"🔭</p>
-                                    <div class="mt-4 pt-2">
-                                        <a href="#" class="btn btn-outline btn-round">Download CV <i class="mdi mdi-download ml-2"></i></a>
-                                    </div>
+                                        "It’s not about the destination, it’s the journey!"🔭</p>                                   
                                 </div>
                             </div>
                         </div>
@@ -105,6 +102,9 @@
                             </div>
                             <h3>About me</h3>
                             <p class="text-muted mb-0 mx-auto para-desc">My name is Svetoslav and I’m currently learning HTML, CSS and PHP. I’m also trying to create wordpress themes. Seeking perfection is in my nature and one day i aspire to be a Full Stack Developer.</p>
+                             <div class="mt-4 pt-2">
+                                <a href="#" class="btn btn-outline btn-round btn-cv" download="CV-Svetoslav Konakov.pdf">Download CV <i class="mdi mdi-download ml-2"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -130,9 +130,6 @@
                                     <h3 class="mb-3">Svetoslav Konakov <small class="text-muted"> - Web Developer</small></h3>
                                     <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
                                     <p class="text-muted">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, e li plu commun vocabules.</p>
-                                    <div class="mt-5">
-                                        <a href="#" class="btn btn-outline btn-round">Read more</a>
-                                    </div>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby="skill-tab">
@@ -238,7 +235,7 @@
                                             <div>                                               
                                                 <div>
                                                     <h6>Bachelor of Software and Internet Techologies</h6>
-                                                    <p class="text-muted">Technical University, Varna /  2021 - 2022</p>
+                                                    <p class="text-muted">Technical University, Varna /  2019 - 2021</p>
                                                     <hr class="mt-4 mb-4">
                                                 </div>
                                                 <div>
@@ -547,11 +544,8 @@
 
         <!-- counters start -->
         <section class="section bg-counter">
-            <div class="bg-overlay"></div>
-            <div class="container">
-                <div class="row" id="counter">
-                    
-                </div>
+            <div class="row" id="counter">
+                
             </div>
         </section>
         <!-- counters end -->
