php projects uploaded

--- a/index.html
+++ b/index.html
@@ -554,10 +554,10 @@
                                     <h5>Arrays</h5>
                                     <p class="text-uppercase">PHP</p>
 
-                                    <a href="resources/projects/html/PSD 3/index.html" target="_blank" title="">
+                                    <a href="resources/projects/php/multidimensional-arrays/arrays.php" target="_blank" title="">
                                         <button class="preview">Preview</button>
                                     </a>                                      
-                                    <a href="#">
+                                    <a href="resources/projects-pages/php/multidimensional-arrays/array_getbyid.html">
                                         <button class="landing-page">Landing Page</button>
                                     </a>
                                 </div>
@@ -573,10 +573,10 @@
                                     <h5>Arrays</h5>
                                     <p class="text-uppercase">PHP</p>
 
-                                    <a href="resources/projects/html/PSD 3/index.html" target="_blank" title="">
+                                    <a href="resources/projects/php/multidimensional-arrays/array_getbyid.php" target="_blank" title="">
                                         <button class="preview">Preview</button>
                                     </a>                                      
-                                    <a href="#">
+                                    <a href="resources/projects-pages/php/multidimensional-arrays/arrays.html">
                                         <button class="landing-page">Landing Page</button>
                                     </a>
                                 </div>
