--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <i class="mdi mdi-account-settings h1 text-muted"></i>
                             </div>
                             <h3>About me</h3>
-                            <p class="text-muted mb-0 mx-auto para-desc">My name is Svetoslav and I’m currently learning HTML, CSS and PHP. I’m also trying to create wordpress themes. Seeking perfection is in my nature and one day i aspire to be a Full Stack Developer.</p>
+                            <p class="text-muted mb-0 mx-auto para-desc">My name is Svetoslav and I’m currently learning HTML, CSS and PHP. I’m also trying to create wordpress themes. Seeking perfection is in my nature and one day I aspire to be a Full Stack Developer.</p>
                              <div class="mt-4 pt-2">
                                 <a href="#" class="btn btn-outline btn-round btn-cv" download="CV-Svetoslav Konakov.pdf">Download CV <i class="mdi mdi-download ml-2"></i></a>
                             </div>
@@ -405,7 +405,6 @@
                         <li><a class="categories active" data-filter=".html">HTML & CSS</a></li>
                         <li><a class="categories" data-filter=".php">PHP</a></li>
                         <li><a class="categories" data-filter=".javascript">JavaScript</a></li>
-                        <li><a class="categories" data-filter=".wordpress">Wordpress</a></li>
                     </ul>
                 </div>
                 <!-- portfolio menu end -->
