--- a/resources/projects-pages/js/JS-Cart/JS-Cart.html
+++ b/resources/projects-pages/js/JS-Cart/JS-Cart.html
@@ -72,7 +72,7 @@
         <div class="project">
             <div class="shell">
                 <div class="header">
-                    <h1>PSD to HTML</h1>
+                    <h1>JS Cart</h1>
                 </div>
 
                 <div class="content">
