--- a/resources/projects-pages/php/booking-form/booking-form.html
+++ b/resources/projects-pages/php/booking-form/booking-form.html
@@ -72,7 +72,7 @@
         <div class="project">
             <div class="shell">
                 <div class="header">
-                    <h1>PSD to HTML</h1>
+                    <h1>Booking Form</h1>
                 </div>
 
                 <div class="content">
