--- a/resources/projects-pages/php/contact_book/contact-book.html
+++ b/resources/projects-pages/php/contact_book/contact-book.html
@@ -72,7 +72,7 @@
         <div class="project">
             <div class="shell">
                 <div class="header">
-                    <h1>PSD to HTML</h1>
+                    <h1>Contact Book</h1>
                 </div>
 
                 <div class="content">
