--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <h3>About me</h3>
                             <p class="text-muted mb-0 mx-auto para-desc">My name is Svetoslav and I’m currently learning HTML, CSS and PHP. I’m also trying to create wordpress themes. Seeking perfection is in my nature and one day I aspire to be a Full Stack Developer.</p>
                              <div class="mt-4 pt-2">
-                                <a href="CV-Svetoslav-Konakov.pdf" class="btn btn-outline btn-round btn-cv" download="CV-Svetoslav-Konakov.pdf">Download CV <i class="mdi mdi-download ml-2"></i></a>
+                                <a href="file:///D:/server/public/lessons/Konakov-website/Dirio_v1.1.0/HTML/CV-Svetoslav-Konakov.pdf" class="btn btn-outline btn-round btn-cv" download="CV-Svetoslav Konakov.pdf">Download CV <i class="mdi mdi-download ml-2"></i></a>
                             </div>
                         </div>
                     </div>
