--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                                     <h5>PSD to HTM</h5>
                                     <p class="text-uppercase">HTML/CSS</p>
 
-                                    <a href="resources/projects/html/PSD 5/index.html" target="_blank" title="">
+                                    <a href="resources/projects/html/PSD 6/index.html" target="_blank" title="">
                                         <button class="preview">Preview</button>
                                     </a>                                      
                                     <a href="resources/projects-pages/html/PSD5/PSD5.html">
@@ -515,7 +515,7 @@
                                     <h5>Booking Form</h5>
                                     <p class="text-uppercase">PHP</p>
 
-                                    <a href="resources/projects/php/booking-form/index.html" target="_blank" title="">
+                                    <a href="resources/projects/php/Booking Form/index.html" target="_blank" title="">
                                         <button class="preview">Preview</button>
                                     </a>                                      
                                     <a href="resources/projects-pages/php/booking-form/booking-form.html">
