--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
                                         <img src="css/images/about-me.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle">
                                     </div>
                                     <h3 class="mb-3">Svetoslav Konakov <small class="text-muted"> - Web Developer</small></h3>
-                                    <p class="text-muted">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                    <p class="text-muted">Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, e li plu commun vocabules.</p>
+                                    <p class="text-muted">Learning new skills brings me pleausure. I`m trying to reach the best version of me because that`s what life is about. There is a certain beauty in creating something from scratch, so when you look back you realise that you have grown just as the thing you are bulding, no matter what it is.</p>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby="skill-tab">
