Add Laravel Project

--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
                         <li><a class="categories active" data-filter=".html">HTML & CSS</a></li>
                         <li><a class="categories" data-filter=".php">PHP</a></li>
                         <li><a class="categories" data-filter=".javascript">JavaScript</a></li>
+                        <li><a class="categories" data-filter=".laravel">Laravel</a></li>
                     </ul>
                 </div>
                 <!-- portfolio menu end -->
@@ -575,6 +576,25 @@
                                         <button class="preview">Preview</button>
                                     </a>                                      
                                     <a href="resources/projects-pages/php/multidimensional-arrays/arrays.html">
+                                        <button class="landing-page">Landing Page</button>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                     <div class="col-lg-4 spacing laravel">
+                        <div class="item-box mt-2">
+                            <img class="item-container img-fluid mx-auto" src="css/projects-images/html/PSD4.png" alt="2" style="width: 374px; height: 267px;" />
+                            <div class="item-mask">
+                                <div class="item-caption text-white text-center">
+                                    <h5>PSD to HTM</h5>
+                                    <p class="text-uppercase">Laravel</p>
+
+                                    <a href="resources/projects/html/PSD 4/index.html" target="_blank" title="">
+                                        <button class="preview">Preview</button>
+                                    </a>                                      
+                                    <a href="resources/projects-pages/html/PSD4/PSD4.html">
                                         <button class="landing-page">Landing Page</button>
                                     </a>
                                 </div>
