--- a/resources/projects-pages/html/PSD3/PSD3.html
+++ b/resources/projects-pages/html/PSD3/PSD3.html
@@ -77,7 +77,7 @@
 
                 <div class="content">
                     <div class="image-code">
-                        <img src="/psd3.jpg">
+                        <img src="css/images/psd3.jpg">
                     </div>
 
                     <div class="image-arrow">
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="preview-image.jpg">
+                        <img src="css/images/preview-image.jpg">
                     </div>
                 </div>
 
