Changle image link

--- a/resources/projects-pages/html/PSD3/PSD3.html
+++ b/resources/projects-pages/html/PSD3/PSD3.html
@@ -77,7 +77,7 @@
 
                 <div class="content">
                     <div class="image-code">
-                        <img src="css/images/psd3.jpg">
+                        <img src="/resources/projects-pages/html/PSD3/css/images/psd3.jpg">
                     </div>
 
                     <div class="image-arrow">
