--- a/resources/projects-pages/html/PSD4/PSD4.html
+++ b/resources/projects-pages/html/PSD4/PSD4.html
@@ -77,7 +77,7 @@
 
                 <div class="content">
                     <div class="image-code">
-                        <img src="../PSD3/psd3.jpg">
+                        <img src="/resources/projects-pages/html/PSD3/css/images/psd.jpg">
                     </div>
 
                     <div class="image-arrow">
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="psd4.jpg">
+                        <img src="/resources/projects-pages/html/PSD4/css/images/psd.jpg">
                     </div>
                 </div>
 
