--- a/resources/projects-pages/php/multidimensional-arrays/array_getbyid.html
+++ b/resources/projects-pages/php/multidimensional-arrays/array_getbyid.html
@@ -77,7 +77,7 @@
 
                 <div class="content">
                     <div class="image-code">
-                        <img src="../../html/PSD3/psd3.jpg">
+                        <img src="/resources/projects-pages/html/PSD3/css/images/psd.jpg">
                     </div>
 
                     <div class="image-arrow">
