Change images links

--- a/resources/projects-pages/js/JS-Cart/JS-Cart.html
+++ b/resources/projects-pages/js/JS-Cart/JS-Cart.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="js-cart.jpg">
+                        <img src="/resources/projects-pages/js/JS-Cart/js-cart.jpg">
                     </div>
                 </div>
 
