--- a/resources/projects-pages/laravel/Project-Messages/project-messages.html
+++ b/resources/projects-pages/laravel/Project-Messages/project-messages.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="project-messages.jpg">
+                        <img src="/resources/projects-pages/laravel/Project-Messages/project-messages.jpg">
                     </div>
                 </div>
 
