--- a/resources/projects-pages/php/booking-form/booking-form.html
+++ b/resources/projects-pages/php/booking-form/booking-form.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="booking-form.jpg">
+                        <img src="/resources/projects-pages/php/booking-form/booking-form.jpg">
                     </div>
                 </div>
 
