--- a/resources/projects-pages/php/contact form/contact-form.html
+++ b/resources/projects-pages/php/contact form/contact-form.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="contact-form.jpg">
+                       <img src="/resources/projects-pages/php/contact-form/contact-form.jpg">
                     </div>
                 </div>
 
