--- a/resources/projects-pages/php/contact_book/contact-book.html
+++ b/resources/projects-pages/php/contact_book/contact-book.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="contact-book.jpg">
+                        <img src="/resources/projects-pages/php/contact_book/contact-book.jpg">
                     </div>
                 </div>
 
