--- a/resources/projects-pages/html/PSD5/PSD5.html
+++ b/resources/projects-pages/html/PSD5/PSD5.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="psd5.jpg">
+                        <img src="/resources/projects-pages/html/PSD3/css/images/psd.jpg">
                     </div>
                 </div>
 
