--- a/resources/projects-pages/php/multidimensional-arrays/arrays.html
+++ b/resources/projects-pages/php/multidimensional-arrays/arrays.html
@@ -106,7 +106,7 @@
                     </div>
 
                     <div class="image-page">
-                        <img src="../../html/PSD3/psd3.jpg">
+                        <img src="/resources/projects-pages/html/PSD3/css/images/psd.jpg">
                     </div>
                 </div>
 
