Change laravel image names

--- a/index.html
+++ b/index.html
@@ -585,13 +585,13 @@
 
                      <div class="col-lg-4 spacing laravel">
                         <div class="item-box mt-2">
-                            <img class="item-container img-fluid mx-auto" src="css/projects-images/laravel/project-messages.jpg" alt="2" style="width: 374px; height: 267px;" />
+                            <img class="item-container img-fluid mx-auto" src="css/projects-images/laravel/img.jpg" alt="2" style="width: 374px; height: 267px;" />
                             <div class="item-mask">
                                 <div class="item-caption text-white text-center">
                                     <h5>PSD to HTM</h5>
                                     <p class="text-uppercase">Laravel</p>
 
-                                    <a href="resources/projects/laravel/Project-Messages/resources/views/homepage.blade.php" target="_blank" title="">
+                                    <a href="https://github.com/KonakovBG/Project-Messages" target="_blank" title="">
                                         <button class="preview">Preview</button>
                                     </a>                                      
                                     <a href="resources/projects-pages/laravel/Project-Messages/project-messages.html">
