Change Laravel project page file name

--- a/index.html
+++ b/index.html
@@ -588,8 +588,7 @@
                             <img class="item-container img-fluid mx-auto" src="/css/projects-images/laravel/project-messages.jpg" alt="2" style="width: 374px; height: 267px;" />
                             <div class="item-mask">
                                 <div class="item-caption text-white text-center">
-                                    <h5>PSD to HTM</h5>
-                                    <p class="text-uppercase">Laravel</p>
+                                    <h5>Laravel</h5>
 
                                     <a href="https://github.com/KonakovBG/Project-Messages" target="_blank" title="">
                                         <button class="preview">Preview</button>
